Fri Mar 11 08:08:50 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* breakpoint.c (_initialize_breakpoint): Update docstring for
	tbreak to match what the code actually does.  Don't mention tbreak
	in docstrings for "enable once" or "enable breakpoints once".

Thu Mar 10 08:52:38 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* symfile.h (ADD_PSYMBOL_VT_TO_LIST): Don't put a semicolon after
	while (0).  That defeats the whole purpose of using do . . . while (0).
	* mdebugread.c (parse_partial_symbols): Don't use ?: expression as
	list for ADD_PSYMBOL_TO_LIST; the macro takes its address and
	using a ?: expression as an lvalue is not portable.

	* stabsread.c (define_symbol): If REG_STRUCT_HAS_ADDR, also
	convert a LOC_ARG to a LOC_REF_ARG.  Update code which combines
	'p' and 'r' symbol descriptors into a single symbol to look for a
	LOC_REF_ARG.
	* README, config/sparc/tm-sparc.h: Update comments.

Wed Mar  9 21:43:24 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* mdebugread.c (parse_type):  Do not complain for types with
	an `indexNil' aux index, these are simply undefined types.
	Remove indexNil check from caller of parse_type.
	* mdebugread.c (parse_partial_symbols):  Do not enter
	stGlobal, scCommon symbols into the minimal symbol table, their
	value is the size of the common, not its address.
	Handle scInit, scFini, scPData and scXData sections.
	Use minimal symbol type mst_file_* for stLabel symbols, instead of
	mst_*.
	Enter stProc symbols into the global_psymbols list once, not into
	the static_psymbols_list.
	Get rid of dummy psymtab if it is empty, to allow proper detection
	of stripped executables.
	* mdebugread.c (cross_ref):  Allow cross references to Fortran
	common blocks.

Wed Mar  9 15:23:19 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* stabsread.c (common_block_end, fix_common_block): Stash the
	struct pending * in the SYMBOL_TYPE, not the SYMBOL_NAMESPACE, so
	as to not assume that a pointer fits in an enum.
